# theADCcode

./: .hgignore  Makefile  Makefile.old  adc_matrix.hpp  adc_selector.cpp  adc_selector.hpp  blas_matrix.cpp  blas_matrix.hpp  block_container.hpp  input_data.cpp  input_data.hpp  input_struct.hpp  integral_blocks.hpp  integral_table.cpp  integral_table.hpp  main.cpp  matrices.hpp
.hg/store/data/: .hgignore.i  _makefile.i  adc__analyzer.cpp.i  adc__analyzer.hpp.i  adc__matrix.hpp.i  adc__selector.cpp.i  adc__selector.hpp.i  blas__matrix.cpp.i  blas__matrix.hpp.i  block__container.hpp.i  input__data.cpp.i  input__data.hpp.i  input__struct.hpp.i  integral__blocks.hpp.i  integral__exporter.cpp.i  integral__exporter.hpp.i  integral__table.cpp.i  integral__table.hpp.i
.hg/store/data/_lanczos/: _makefile.i  bnd2td.f.i  excitedstates._c.i  lanczos.h.i  lanczos__comments.h.i  lanczos__engine.h.i  lanczos__util.cpp.i  lanczos__util.h.i  main.cpp.i  my__dsbev.f90.i  readme.txt.i  tddiag.f.i
.hg/store/data/adc2__cap/: _makefile.i  adc2__cap__matrix.cpp.i  adc2__cap__matrix.hpp.i  first__order.cpp.i  first__order.hpp.i  first__order__triplet.cpp.i  first__order__triplet.hpp.i  full__cap__analyzer.cpp.i  full__cap__analyzer.hpp.i  get__cap.f90.i  second__order.cpp.i  second__order.hpp.i  (+6 more)
Lanczos/: Makefile  bnd2td.f  lanczos.h  lanczos_comments.h  lanczos_engine.h  lanczos_util.cpp  lanczos_util.h  readme.txt  tddiag.f
adc2_dip/: Makefile  adc2_dip_blocks.cpp  adc2_dip_blocks.hpp  adc2_matrix.cpp  adc2_matrix.hpp  config.hpp  singlet.cpp  singlet.hpp  triplet.cpp  triplet.hpp
adc2_pol/: Makefile  adc2_pol_adapter.f90  adc2_pol_adapter.mod  adc2_pol_matrix.cpp  adc2_pol_matrix.hpp  adc_ph.f90  adc_ph.mod  constants.mod  davmod.f90  davmod_my.f90  dipole_ph.f90  filetools.mod  fspace.f90  get_matrix.f90  get_matrix.mod  get_moment.f90  main_draft1.f90  master_adc2.f90  master_adc2ext.f90  master_fano_new.f90  master_tda.f90  misc.f90  misc.mod  parameters.f90  parameters.mod  partgammas.f90  read_param.f90  select_fano.f90  select_fano.mod  stieltjes_phi1.f  sym_allowed.f90  test.f90  tql2.f
adc2_prop/: Makefile  adc2_cap_matrix.cpp  adc2_cap_matrix.hpp  first_order.cpp  first_order.hpp  first_order_triplet.cpp  first_order_triplet.hpp  second_order.cpp  second_order.hpp  second_order_triplet.cpp  second_order_triplet.hpp  zeroth_order.cpp  zeroth_order.hpp  zeroth_order_triplet.cpp  zeroth_order_triplet.hpp
analysis/: Makefile  adc2_dip_analyzer.cpp  adc2_dip_analyzer.hpp  adc_analyzer.cpp  adc_analyzer.hpp  full_cap_analyzer.cpp  full_cap_analyzer.hpp  isr_dipole_analyzer.cpp  isr_dipole_analyzer.hpp  subspacecap_analyzer.cpp  subspacecap_analyzer.hpp
examples/: test_all.sh
examples/adc2dip/: francesco_dip.out  test.pl
examples/adc2dip/guk/: dip.in
examples/adc2dip/gus/: data.for.SCF  dip.in  hcl.SCF.interface
examples/adc2dip/molcas/: dip.in
examples/adc2pol/: soeren_kirill_pol.out  test.pl
examples/adc2pol/guk/: pol.in
examples/adc2pol/gus/: data.for.SCF  ne.SCF.interface  pol.in
examples/adc2pol/molcas/: pol.in
examples/dip_cap/: dip_cap.traj  test.pl
examples/dip_cap/gus/: Li.inp  dip_cap.in
examples/ndadc3ip/: test.pl
examples/ndadc3ip/guk/: ip.in
examples/ndadc3ip/gus/: data.for.SCF  ip.in  n2.SCF.interface
examples/ndadc3ip/molcas/: ip.in
examples/twohole/: adcpop.out  test.pl
examples/twohole/guk/: popana.in
examples/twohole/gus/: data.for.SCF  lih.SCF.interface  popana.in
examples/twohole/molcas/: popana.in
libs/gcc/phis/0.12/: Makefile  Makefile.in  NEWS  SPEC  config.status  configure  configure.ac
libs/gcc/phis/0.12/examples/: Makefile  fint_check.f  fsample.f  sample.c  scm-sample.scm
libs/gcc/phis/0.12/guk/: Makefile.in  config.status  phis_guk_ao.c  phis_guk_dip.c  phis_guk_info.c  phis_guk_occ.c  phis_guk_overlap.c  sort_gukscf.c  typedefs.h
libs/gcc/phis/0.12/guk/CVS/: Entries
libs/gcc/phis/0.12/guk/include/: phis.h
libs/gcc/phis/0.12/guk/test/: README
libs/gcc/phis/0.12/guk/tools/: dump_section.c
libs/gcc/phis/0.12/include/: config.h  molcas.fh.in  phis.h
libs/gcc/phis/0.12/molcas/: Makefile  dpsort.f  m_init.c  phis_mc_active.F  phis_mc_dip.F  phis_mc_geometry.F  phis_mc_occ.F  phis_mc_oneel.F  phis_mc_scfvec.test.F  phis_mc_vel.F
libs/gcc/phis/0.12/molcas/test/: README  test.1
libs/gcc/phis/0.12/phis/: Makefile  Makefile.in  Vpqrs.c
libs/gcc/phis/0.12/phis/blas/: dgemm.f
libs/gcc/phis/0.12/phis/blas/CVS/: Entries
libs/gcc/phis/0.12/scm/: Makefile
libs/gcc/phis/0.12/stub/: ChangeLog
ndadc3_ip/: Makefile  adc_macros.h  calc_c11_2.c  calc_c11_3.c  calc_c12_1.c  calc_c12_2.c  calc_c22_1_dia.c  calc_c22_1_off.c  calc_dim_2h1p.c  calc_k1.c  calc_k2.c  get_input.h  globals.h  id_self_energy.cpp  id_self_energy.hpp  make_symtab.cpp  make_symtab.h  nd_adc3_matrix.cpp  nd_adc3_matrix.hpp  read_scf_data.h  self_energy.cpp  self_energy.hpp
ndadc3_prop/: Makefile  calc_d_null_null.c  calc_dim_2h1p.c  calc_dim_2p1h.c  calc_indeces.h  calc_psi0_rho_psi0.c  cap_calc_psi0_rho_psi0.c  cap_calc_psi0_rho_psi0.c_save_januar2006  make_matrix.c  my_adc_macros.h  my_calc_d11.c  my_calc_d11.c_saveholgersIndizes  my_calc_d12.c  my_calc_d12.c_saveholgersVorfaktoren  my_calc_d22_diag.c  my_calc_d22_off.c  my_calc_d_null.c  my_calc_indeces.c  my_globals.h  my_main_cap.c  my_main_cap.c_save  my_read_cap_elements.c  my_read_cap_elements.c_save  nd_adc3_cap_matrix.cpp  nd_adc3_cap_matrix.hpp
scf_data/: Makefile  cap_Sajeev.f  dgamma_.c  gauss2_.c  gus_reader.cpp  gus_reader.hpp  intgauss_.c  phis_guk.cpp  phis_guk.hpp  phis_molcas.cpp  phis_molcas.hpp  polmulti_.c  poltrans_.c  r2capmat.f90  scf_data_interface.hpp  scf_data_reader.cpp  scf_data_reader.hpp
subspaceCAP/: ADC_eigenvectors.f90  CAP.f90  CAPADC.f90  CAP_MO.f90  CAP_doubly.f90  CAP_doubly_triplet.f90  Makefile  README  adc.mod  cap_main.f90  cap_mo.mod  config.f90  def_config.mod  dmat.f90  dmat.mod  dmat_triplet.f90  dmat_triplet.mod  input.f90  input.mod  main2.f90  main_cap.mod  test.f90  test.mod
tools/: CreateXmgr.pm  get_pop.pl  get_spec.pl
(+4993 files in other folders)
